Fix the npm run build fail during docker-compose up

--- a/app-server/.dockerignore
+++ b/app-server/.dockerignore
@@ -1,7 +1,7 @@
-.vscode
-.nvmrc
-.gitignore
-.git
-node_modules
-.svelte-kit
-app-output
+app/.vscode
+app/.nvmrc
+app/.gitignore
+app/.git
+app/node_modules
+app/.svelte-kit
+app/app-output
