Create volume for editable files during development

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,3 +11,6 @@ services:
       - "3000:3000"
       - "24678:24678"
     container_name: app-dev
+    volumes:
+      - './app-server/app/static:/usr/src/app/static'
+      - './app-server/app/src:/usr/src/app/src'
